# JobPrep-AI-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/graph/: builder.py  chains.py  nodes.py  prompts.py  state.py
app/llm/: model.py
app/schemas/: outputs.py  request.py  response.py
app/utils/: routing.py  tavily_search.py
